fix: add some steps to fix bug on safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background-color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -30,4 +30,13 @@ body {
 
 body {
   font-family: 'Fabrikat Mono', monospace;
+}
+
+/* * {
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+} */
+
+* {
+  will-change: auto;
 }
